# data-streams

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
proptest-regressions/: source.txt
src/: core_io.rs  error.rs  lib.rs  sink.rs  slice.rs  source.rs  std_io.rs  utf8.rs  vec.rs  wrappers.rs
src/source/: exact_size.rs  impls.rs  markers.rs
tests/: ascii.rs  lib.rs  utf8.rs
