[package]
name = "data-streams"
version = "1.1.0"
edition = "2021"
authors = ["NightEule5 <24661563+NightEule5@users.noreply.github.com>"]
description = "Extension traits for reading and writing data with streams."
keywords = ["io"]
license = "Apache-2.0"
homepage = "https://github.com/NightEule5/data-streams/"
repository = "https://github.com/NightEule5/data-streams/"

[features]
default = ["std", "alloc"]
std = ["num-traits/std", "simdutf8/std", "proptest/std"]
alloc = ["simdutf8", "proptest/alloc"]
nightly = ["nightly_specialization"]
nightly_specialization = []

[dependencies]
bytemuck = "1.16.1"
num-traits = { version = "0.2.19", features = ["i128"] }
simdutf8 = { version = "0.1.4", optional = true }

[dev-dependencies]
proptest = { version = "1.5.0", default-features = false }
